Updated targets + packageJvm*App gradle tasks